changed names to be more descriptive

--- a/mayhem/Dockerfile
+++ b/mayhem/Dockerfile
@@ -1,4 +1,3 @@
-# FROM fuzzers/go-fuzz:1.2.0
 FROM golang:1.18 as builder
 
 COPY . /yml2dot
@@ -6,10 +5,11 @@ WORKDIR /yml2dot/mayhem
 
 RUN go install github.com/dvyukov/go-fuzz/go-fuzz@latest github.com/dvyukov/go-fuzz/go-fuzz-build@latest
 RUN go get github.com/dvyukov/go-fuzz/go-fuzz-dep
+RUN go get github.com/AdaLogics/go-fuzz-headers
 RUN apt update && apt install -y clang
 
-RUN go-fuzz-build -libfuzzer -o fuzz.a && \
-    clang -fsanitize=fuzzer fuzz.a -o fuzz.libfuzzer
+RUN go-fuzz-build -libfuzzer -o fuzzParser.a && \
+    clang -fsanitize=fuzzer fuzzParser.a -o fuzzParser.libfuzzer
 
 FROM debian:bookworm-slim
-COPY --from=builder /yml2dot/mayhem/fuzz.libfuzzer /
+COPY --from=builder /yml2dot/mayhem/fuzzParser.libfuzzer /
